--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ads.ios-support": "1.0.0",
     "com.unity.ai.navigation": "1.1.5",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.feature.worldbuilding": "1.0.1",
     "com.unity.ide.visualstudio": "2.0.22",
